--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -264,17 +264,32 @@ section{
     position: relative;
 }
 
-.right-slider img{
-    width: 1200px;
+.slider-img div img{
     position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    width: 1200px;
+    left: 200px;
 }
 
-.slider-img{
+.slick-dots{
     position: absolute;
-    left: 250px;
+    top: -50px;
+    left: -10px;
+    height: 800px;
+    width: 200px;
+    background: #232340;
 }
+
+.slick-dots li{
+    margin-top: 125px;
+    display: flex;
+    justify-content: center;
+}
+
+.slick-dots li a{
+    color: white;
+    font-size: 18px;
+    letter-spacing: 2px;
+}
+
 
 /* Intro Style End */
