--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -212,6 +212,7 @@ section{
     color: white;
     font-size: 64px;
     letter-spacing: 2px;
+    margin: 30px 0px;
 }
 
 .header-left{
@@ -292,8 +293,16 @@ section{
 
 .slick-dots li a{
     color: white;
+    opacity: 0.5;
     font-size: 18px;
     letter-spacing: 2px;
+    transition: 0.3s;
+    font-weight: var(--font-medium);
+}
+
+.slick-dots .slick-active a{
+    opacity: 1;
+    transition: 0.3s;
 }
 
 .desc{
@@ -372,6 +381,22 @@ section{
 
 .head-light .hero-text{
     margin-bottom: -50px;
+}
+
+.head-light .header-center{
+    left: -340px;
+}
+
+.head-dark .header-center{
+    left: -300px;
+}
+
+.head-dark .header-center-sub-title{
+    color: white;
+}
+
+.head-dark .header-center-title{
+    color: white;
 }
 
 .recent-list{
@@ -561,6 +586,10 @@ section{
 #jobs{
     margin-top: 350px;
     height: 120rem;
+}
+
+#jobs .header-center{
+    left: -370px;
 }
 
 /* Jobs Style End */
