--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -427,7 +427,7 @@ section{
     height: 600px;
     background-color: #fccc78;
     position: relative;
-    left: 100px;
+    /* left: 100px; */
     border-radius: 24px;
 }
 
@@ -757,7 +757,7 @@ section{
     color: white;
 }
 
-.arrow-right img:hover{
+.talk-hello .arrow-right img:hover{
     border: 1px solid white;
     background-color: white;
     transition: 0.5s;
